Fixed css styling for smaller screens: Added flex-wrap for calender

--- a/airbnb-ical-calendar/airbnb_ical_calender.css
+++ b/airbnb-ical-calendar/airbnb_ical_calender.css
@@ -3,6 +3,7 @@ div.vanilla-calendar {
 }
 .vanilla-calendar-grid {
     display: flex;
+    flex-wrap: wrap;
     flex-grow: 1;
     gap: 1.75rem;
     justify-content: center;
